testsuite/tests/properties/invalid_new_node/not_synth.lkt
import common

class LiteralList: ASTList[Literal] {
    @memoized fun prop(): Literal = Literal()
}
